fix the patreon thing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,48 +39,102 @@
         <mat-card-content>
             <div class="row">
                 <div class="col-md-1 offset-md-4">
-                    <img style="width: 50px; height: auto;" class="col"
-                        src="assets/bookends/oathsworn-mark-left-bookend.png">
+                    <img style="width: 65px; height: auto;margin-left:70%;" class="col"
+                        src="assets/bookends/oathsworn mark left bookend.png">
                 </div>
-                <div class="col-2">
-
-                    <h3 style="text-align:center">
+                <div class="col-md-auto" style="margin-top:25px">
+                    <h1 style="font-size:4em;text-align:center">
                         Oathsworn
-                    </h3>
+                    </h1>
                 </div>
-                <div class="col-5">
-
+                <div class="col-1">
+                    <img style="width: 65px; height: auto;margin-left:-20%" class="col"
+                        src="assets/bookends/oathsworn mark right bookend.png">
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col" style="text-align:end">
-                        <h5>Flintlocke</h5>
+                    <div class="col">
+                        <h4 style="text-align:end;">Flintlocke</h4>
                     </div>
                     <div class="col">
-                        <h5>Rarelygood</h5>
+                        <h4>Rarelygood</h4>
                     </div>
                 </div>
             </div>
-            <h4 style="text-align:center;">
-                Devoted
-            </h4>
-            <h4 style="text-align:center;">
-                Loyal
-            </h4>
+            <mat-divider></mat-divider>
+            <div class="row">
+                <div class="col-md-1 offset-md-4">
+                    <img style="width: 35px; height: auto;margin-left:145%;" class="col"
+                        src="assets/bookends/devoted mark left bookend.png">
+                </div>
+                <div class="col-md-2" style="margin-top:25px">
+                    <h2 style="text-align:center">
+                        Devoted
+                    </h2>
+                </div>
+                <div class="col-1">
+                    <img style="width: 35px; height: auto;margin-left:-70%" class="col"
+                        src="assets/bookends/devoted mark right bookend.png">
+                </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row">
+                <div class="col-md-1 offset-md-4">
+                    <img style="width: 35px; height: auto;margin-left:165%;" class="col"
+                        src="assets/bookends/loyal mark left bookend.png">
+                </div>
+                <div class="col-md-2" style="margin-top:10px">
+                    <h2 style="text-align:center">
+                        Loyal
+                    </h2>
+                </div>
+                <div class="col-1">
+                    <img style="width: 35px; height: auto;margin-left:-90%" class="col"
+                        src="assets/bookends/loyal mark right bookend.png">
+                </div>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <h6 style="text-align:center;">Sepa Ixen</h6>
                     </div>
                 </div>
+            </div>            
+            <mat-divider></mat-divider>
+            <div class="row">
+                <div class="col-md-1 offset-md-4">
+                    <img style="width: 25px; height: auto;margin-left:180%;" class="col"
+                        src="assets/bookends/peon mark left bookend.png">
+                </div>
+                <div class="col-md-2">
+                    <h3 style="text-align:center">
+                        Peon
+                    </h3>
+                </div>
+                <div class="col-1">
+                    <img style="width: 25px; height: auto;margin-left:-100%" class="col"
+                        src="assets/bookends/peon mark right bookend.png">
+                </div>
+                <div class="col-md-4"></div>
             </div>
-            <h4 style="text-align:center;">
-                Peon
-            </h4>
-            <h4 style="text-align:center;">
-                Avid
-            </h4>
+            <mat-divider></mat-divider>
+            <div class="row">
+                <div class="col-md-1 offset-md-4">
+                    <img style="width: 25px; height: auto;margin-left:185%;" class="col"
+                        src="assets/bookends/avid mark left bookend.png">
+                </div>
+                <div class="col-md-2">
+                    <h3 style="text-align:center">
+                        Avid
+                    </h3>
+                </div>
+                <div class="col-1">
+                    <img style="width: 25px; height: auto;margin-left:-105%" class="col"
+                        src="assets/bookends/avid mark right bookend.png">
+                </div>
+            </div>
+            <mat-divider></mat-divider>
         </mat-card-content>
     </mat-card>
 </div>
