make oathsworn look better when animating

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,16 +39,16 @@
         <mat-card-content>
             <div class="row">
                 <div class="col-md-1 offset-md-4">
-                    <img style="width: 65px; height: auto;margin-left:70%;" class="col"
+                    <img style="width: 65px; height: auto;margin-left:65%;display: block;" class="col"
                         src="assets/bookends/oathsworn mark left bookend.png">
                 </div>
-                <div class="col-md-auto" style="margin-top:25px">
-                    <h1 style="font-size:4em;text-align:center">
+                <div class="col-md-2" style="margin-top:35px;display: block">
+                    <h1 style="font-size:3.5em;text-align:center">
                         Oathsworn
                     </h1>
                 </div>
                 <div class="col-1">
-                    <img style="width: 65px; height: auto;margin-left:-20%" class="col"
+                    <img style="width: 65px; height: auto;margin-left:-20%;display: block" class="col"
                         src="assets/bookends/oathsworn mark right bookend.png">
                 </div>
             </div>
