--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,18 +38,8 @@
         </mat-card-subtitle>
         <mat-card-content>
             <div class="row">
-                <div class="col-md-1 offset-md-4">
-                    <img style="width: 65px; height: auto;margin-left:65%;display: block;" class="col"
-                        src="assets/bookends/oathsworn mark left bookend.png">
-                </div>
-                <div class="col-md-2" style="margin-top:35px;display: block">
-                    <h1 style="font-size:3.5em;text-align:center">
-                        Oathsworn
-                    </h1>
-                </div>
-                <div class="col-1">
-                    <img style="width: 65px; height: auto;margin-left:-20%;display: block" class="col"
-                        src="assets/bookends/oathsworn mark right bookend.png">
+                <div class="col-md-12 align-self-center" style="text-align:center">
+                    <img style="width: 30%; height: auto;;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/oathsworn mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -64,34 +54,14 @@
             </div>
             <mat-divider></mat-divider>
             <div class="row">
-                <div class="col-md-1 offset-md-4">
-                    <img style="width: 35px; height: auto;margin-left:145%;" class="col"
-                        src="assets/bookends/devoted mark left bookend.png">
-                </div>
-                <div class="col-md-2" style="margin-top:25px">
-                    <h2 style="text-align:center">
-                        Devoted
-                    </h2>
-                </div>
-                <div class="col-1">
-                    <img style="width: 35px; height: auto;margin-left:-70%" class="col"
-                        src="assets/bookends/devoted mark right bookend.png">
+                <div class="col-md-12 align-self-center" style="text-align:center">
+                    <img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/devoted mark bookends title.png">
                 </div>
             </div>
             <mat-divider></mat-divider>
             <div class="row">
-                <div class="col-md-1 offset-md-4">
-                    <img style="width: 35px; height: auto;margin-left:165%;" class="col"
-                        src="assets/bookends/loyal mark left bookend.png">
-                </div>
-                <div class="col-md-2" style="margin-top:10px">
-                    <h2 style="text-align:center">
-                        Loyal
-                    </h2>
-                </div>
-                <div class="col-1">
-                    <img style="width: 35px; height: auto;margin-left:-90%" class="col"
-                        src="assets/bookends/loyal mark right bookend.png">
+                <div class="col-md-12 align-self-center" style="text-align:center">
+                    <img style="width: 12.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/loyal mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -103,35 +73,14 @@
             </div>            
             <mat-divider></mat-divider>
             <div class="row">
-                <div class="col-md-1 offset-md-4">
-                    <img style="width: 25px; height: auto;margin-left:180%;" class="col"
-                        src="assets/bookends/peon mark left bookend.png">
+                <div class="col-md-12 align-self-center" style="text-align:center">
+                    <img style="width: 7.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/peon mark bookends title.png">
                 </div>
-                <div class="col-md-2">
-                    <h3 style="text-align:center">
-                        Peon
-                    </h3>
-                </div>
-                <div class="col-1">
-                    <img style="width: 25px; height: auto;margin-left:-100%" class="col"
-                        src="assets/bookends/peon mark right bookend.png">
-                </div>
-                <div class="col-md-4"></div>
             </div>
             <mat-divider></mat-divider>
             <div class="row">
-                <div class="col-md-1 offset-md-4">
-                    <img style="width: 25px; height: auto;margin-left:185%;" class="col"
-                        src="assets/bookends/avid mark left bookend.png">
-                </div>
-                <div class="col-md-2">
-                    <h3 style="text-align:center">
-                        Avid
-                    </h3>
-                </div>
-                <div class="col-1">
-                    <img style="width: 25px; height: auto;margin-left:-105%" class="col"
-                        src="assets/bookends/avid mark right bookend.png">
+                <div class="col-md-12 align-self-center" style="text-align:center">
+                    <img style="width: 5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/avid mark bookends title.png">
                 </div>
             </div>
             <mat-divider></mat-divider>
