--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -80,7 +80,7 @@
                     <h5 style="text-align:end">with a background in screenwriting and graphic design.</h5>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/finn.jpg" style="width: 100%; height:auto;">
+                    <div class="finn" id="finn" (mousemove)="onMouseMove('finn', $event)"></div>
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small></h6>
                 </div>
                 <div class="col-1">
