--- a/src/app/usage-guidelines/usage-guidelines.component.scss
+++ b/src/app/usage-guidelines/usage-guidelines.component.scss
@@ -27,3 +27,13 @@ a {
 .inner { 
     background-color: #8a7942;
 }
+
+.finn {
+    width: 100%;
+    height: 85%;
+    border: 1px solid white;
+    background-image: url(../../assets/developer-profiles/finn.jpg);
+    background-size: 275%;
+    background-position-x: right;
+    background-position-y: bottom;
+}
