bouncy developer pictures

--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -84,7 +84,7 @@
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small></h6>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/frequency.png" style="width: 100%; height:auto;">
+                    <div class="frequency" id="frequency" (mousemove)="onMouseMove('frequency', $event)"></div>
                     <p><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fhotcoffeecat%2F&sa=D&sntz=1&usg=AOvVaw2yA-P8DPQBCb_MKXPOkaWn">HotCoffeeCat</a></small></p>
                 </div>
                 <div class="col-5">
@@ -103,11 +103,11 @@
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/takeo.png" style="width: 100%; height:auto;">
+                    <div class="takeo" id="takeo" (mousemove)="onMouseMove('takeo', $event)"></div>
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Takeo</a></small></h6>
                 </div>
                 <div class="col-1">
-                    <img src="assets/developer-profiles/arcfire.png" style="width: 100%; height:auto;">
+                    <div class="arcfire" id="arcfire" (mousemove)="onMouseMove('arcfire', $event)"></div>
                     <h6><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaftydoesart&sa=D&sntz=1&usg=AOvVaw08j9m0Z2Bu6HjmGyocOZp6">Mafty</a></small></h6>
                 </div>
                 <div class="col-5">
