--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,10 @@
                         <h4 style="text-align:end;">Flintlocke</h4>
                     </div>
                     <div class="col">
-                        <h4>Rarelygood</h4>
+                        <h4 style="text-align:center;">Rarelygood</h4>
+                    </div>
+                    <div class="col">
+                        <h4>Artemis</h4>
                     </div>
                 </div>
             </div>
