--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-1">
             <button mat-button (click)="toggleSidenav()"><img style="width: 40px; height: 100%"
-                    src="assets/eggshell/newcomer-mark.png"></button>
+                    src="assets/newcomer mark.png"></button>
         </div>
         <div class="col-11">
             <h5 style="text-align:center">The Nimbat Colony <a href="https://www.patreon.com/nimbatcolony">Patreon</a> is now live! Please consider supporting us, and check out the site 'u'</h5>
