--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,14 +1,14 @@
 h4 {
-    color: #eae6d6;
+    color: #1c180d;
     padding-top: 10px;
 }
 
 a { 
     text-decoration: none;
-    color: #eea531;
+    color: #3c3218;
 }
 h5 { 
-    color: #eae6d6;
+    color: #1c180d;
     padding-top: 10px;
     padding-bottom: 4px;
 }
@@ -25,6 +25,6 @@ button {
 }
 
 .update { 
-    background-color: #8a7942;
+    background-color: #cdba91;
     margin-bottom: 10px;
 }
