--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 mat-card { 
-    background-color: #c1b485;
+    background-color: #dfcba1;
     font-family: inherit;
     margin-bottom: 1%;
 }
@@ -14,5 +14,5 @@ h5 {
 
 a { 
     text-decoration: none;
-    color: #a8721a;
+    color: #3c3218;
 }
