--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <button mat-button routerLink=""><img style="width: 200px; height: auto;"
-                        src="assets/eggshell/newcomer-mark.png">
+                        src="assets/newcomer mark.png">
                     <h5>NimbatColony.info</h5>
                 </button>
             </div>
@@ -32,35 +32,35 @@
                 <mat-divider></mat-divider>
                 <button mat-button>
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/proliferation.png"> Flight Proliferation</h6>
+                            src="assets/proliferation.png"> Flight Proliferation</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
                 <button mat-button routerLink="protection">
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/protection.png"> Flight Protection</h6>
+                            src="assets/protection.png"> Flight Protection</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
                 <button mat-button>
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/preservation.png"> Flight Preservation</h6>
+                            src="assets/preservation.png"> Flight Preservation</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
                 <button mat-button>
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/populace.png"> Flight Populace</h6>
+                            src="assets/populace.png"> Flight Populace</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
                 <button mat-button>
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/progression.png"> Flight Progression</h6>
+                            src="assets/progression.png"> Flight Progression</h6>
                 </button>
             </div>
         </div>
@@ -117,7 +117,7 @@
                 <mat-divider></mat-divider>
                 <button mat-button>
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
-                            src="assets/eggshell/newcomer-mark.png"> Visitants</h6>
+                            src="assets/newcomer mark.png"> Visitants</h6>
                 </button>
             </div>
         </div>
