--- a/src/app/usage-guidelines/usage-guidelines.component.scss
+++ b/src/app/usage-guidelines/usage-guidelines.component.scss
@@ -1,5 +1,5 @@
 mat-card { 
-    background-color: #c1b485;
+    background-color: #dfcba1;
     font-family: inherit;
 }
 
@@ -13,7 +13,7 @@ h5 {
 
 a { 
     text-decoration: none;
-    color: #a8721a;
+    color: #3c3218;
 }
 
 .container-fluid { 
@@ -21,7 +21,7 @@ a {
     margin-bottom: 3vh;
 }
 .light-link { 
-    color: #eea531;
+    color: #1c180d;
 }
 
 .inner { 
