add all of the main flight pages

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,7 +5,8 @@
                     src="assets/newcomer mark.png"></button>
         </div>
         <div class="col-11">
-            <h5 style="text-align:center">The Nimbat Colony <a href="https://www.patreon.com/nimbatcolony">Patreon</a> is now live! Please consider supporting us, and check out the site 'u'</h5>
+            <h5 style="text-align:center">Our first 18+ NSFW Colony Chronicle is now live! Check it out for free <a href="https://www.nimbatcolony.info/colony-chronicles/caught-up-in-your-wheeling-dealing">here</a>!
+            </h5>
         </div>
     </div>
 </div>
