--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
-                <button mat-button>
+                <button mat-button routerLink="proliferation">
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
                             src="assets/proliferation.png"> Flight Proliferation</h6>
                 </button>
@@ -44,21 +44,21 @@
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
-                <button mat-button>
+                <button mat-button routerLink="preservation">
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
                             src="assets/preservation.png"> Flight Preservation</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
-                <button mat-button>
+                <button mat-button routerLink="populace">
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
                             src="assets/populace.png"> Flight Populace</h6>
                 </button>
             </div>
             <div class="row" @flyInOut *ngIf="isColonyCultureShowing">
                 <mat-divider></mat-divider>
-                <button mat-button>
+                <button mat-button routerLink="progression">
                     <h6 style="text-align:left"><img style="width: 30px; height: auto;"
                             src="assets/progression.png"> Flight Progression</h6>
                 </button>
