--- a/src/app/protection/protection.component.html
+++ b/src/app/protection/protection.component.html
@@ -1,47 +1,98 @@
 <div class="container-fluid">
   <mat-card>
-    <mat-card-title>Actions Buttons</mat-card-title>
-    <mat-card-subtitle>Start</mat-card-subtitle>
+    <mat-card-title>Flight Protection</mat-card-title>
     <mat-card-content>
-    <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
-      included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of
-      readable portions of the book, though many more are currently illegible. A team of researchers are working to
-      restore the pages, and the ones that are currently readable are archived here. As more pages become accessible,
-      and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
-      personal notes, detailing their specific interactions with certain parts of the Colony itself.
-    </h5>
     <h5>
-      It is recommended that only adult researchers access and use this site. Navigating from this page implies you
-      understand that this site is for adults only.
+      <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/protection.png"></div>
+      <br>
+      Flight Protection is tasked with defending and hiding the Colony. 
+      They have powerful illusionists, and train some Nimbats to be surprisingly adept fighters, capable of felling beasts much larger than they are. 
+      Additionally, when an Advocate returns to the Colony with a new Visitant, Flight Protection is the first to meet with them, to get an understanding as to how they are as a person in order to ensure that they are not dangerous. 
+      In some cases, Flight Protection has had some of its members leave the Colony border in order to come to the rescue of an unfortunate passerby under attack.
     </h5>
-    <h5>
-      Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.</h5>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
   </mat-card>
   <br>
   <mat-card>
-    <mat-card-title>Actions Buttons</mat-card-title>
-    <mat-card-subtitle>End</mat-card-subtitle>
-    <h5>Primarily from the notes of Nimbat researcher █████████, this site is a transcription of the details
-      included in their extensive notes on the Nimbat species, and the Colony they reside in. There are plenty of
-      readable portions of the book, though many more are currently illegible. A team of researchers are working to
-      restore the pages, and the ones that are currently readable are archived here. As more pages become accessible,
-      and more research is conducted, more will be added. Throughout the accounts, the researcher leaves a few
-      personal notes, detailing their specific interactions with certain parts of the Colony itself.
+    <mat-card-title>The Three Sects of Flight Protection</mat-card-title>
+    <mat-card-content>
+    <h5>
+      <div class="container">
+        <div class="row">
+            <div class="col">
+                <h4 style="text-align:center;">Illusion</h4>
+            </div>
+            <div class="col">
+                <h4 style="text-align:center;">Defense</h4>
+            </div>
+            <div class="col">
+                <h4 style="text-align:center;">Security</h4>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col" style="text-align:justify">
+            As mentioned above, the illusionist Nimbats are primarily in charge of maintaining the illusory walls that hide the Colony from the public eye. 
+            It is impossible to see from the outside. 
+            It is impossible to smell, hear, or taste anything from the Colony when one is outside the illusory wall. 
+            It’s not even easy to just waltz into the Colony on accident, as several extra illusions are put in place to detract and dissuade travelers and wanderers from stumbling into it. In those rare occasions when someone does arrive, they are deemed “lucky,” and are worthy of investigation. 
+            The illusionists also hide other things within the Colony proper.
+          </div>
+          <div class="col" style="text-align:justify">
+            In circumstances where violence is witnessed, the Defense sect is usually ready to deal with the threat, utilizing their magical skills in a barrage to subdue or outright eliminate the threat. 
+            It is said that when situations are dire, the more pronounced and powerful Nimbats in this sect are brought out to individually handle the situation. The resulting conflict might cause damage to the external parts of the Colony, so priority is given to the rest of the sect to get everyone not engaged in the scuffle out of the area. 
+          </div>
+          <div class="col" style="text-align:justify">
+            The Security sect takes on a similar role to that of Defense, but instead it focuses on domestic matters. 
+            Clearly-seen bands that are wrapped around the root of the right arm indicate members of this sect. 
+            These sorts can be approached when issues arrive, and assistance is needed, whether it’s something violent or there’s just someone in need of help. 
+          </div>
+      </div>
+  </div>
+    </h5>
+    </mat-card-content>
+  </mat-card>
+  <br>
+  
+  <mat-card>
+    <mat-card-title>Eislyn, Flight Protection Elder</mat-card-title>
+    <mat-card-content>
+    <h5 class="notes">
+      "Eislyn is apparently a master illusionist. So much so that even the inhabitants are not completely aware how much of the environment is fabricated. The only guaranteed illusions she deploys is a majority of the external field that hides the Colony, and the spectral clones that occasionally spawn in public spaces. She is described as a quiet, terse, but overall nice Nimbat. Some say that she is fond of sappy and romantic things, and horror stories as well. When she tells a tale, she deploys her illusions just to spice up the scenery. How terrifying! It’s a very good thing she loves the Colony she protects. I didn’t expect an illusionist to not be a trickster…"
     </h5>
     <h5>
-      It is recommended that only adult researchers access and use this site. Navigating from this page implies you
-      understand that this site is for adults only.
+      <div class="container">
+        <div class="row">
+            <div class="col">
+                <h4 style="text-align:center;">Eris</h4>
+                <h6 style="text-align:center;">Illusion Sect Leader</h6>
+            </div>
+            <div class="col">
+                <h4 style="text-align:center;">Soteria</h4>
+                <h6 style="text-align:center;">Defense Sect Leader</h6>
+            </div>
+            <div class="col">
+                <h4 style="text-align:center;">Marshall</h4>
+                <h6 style="text-align:center;">Security Sect Leader</h6>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col notes" style="text-align:justify">
+            "Eris was a fascinating experience. She’s managed to master illusion magic to the extent of making herself purely invisible, though I cannot tell (and she wouldn’t reveal to me) if it was camouflage or actual invisibility. I don’t think there’s much of a difference either way. She talked at length about her ability to change the world around her without anyone really noticing that it wasn’t actually real... She also didn’t say if she was doing it at the time."
+          </div>
+          <div class="col notes" style="text-align:justify">
+            "Soteria is a uniformed Nimbat, cloaked in a lavender-colored covering that hides most of his body below the neck. I had inquired why he seems keen on hiding his shape, and he explained that he simply did not want to frighten me with his repertoire. According to him, he had once resorted to heretical means to amplify the power of his own magic, but the process had permanently damaged his body. Nevertheless, he serves as a clear indicator for how terrifying the Nimbats in Defense can be. He has the ability to create weaponry out of thin air."
+          </div>
+          <div class="col notes" style="text-align:justify">
+            "Marshall is a tall, battle-scarred Nimbat. So tall, in fact, that I honestly mistook her as a Visitant at first. I got to speak at length with her, and she honestly amazed me with her insight on many topics that I felt she would have no idea about. She gave me details on Colony Incident Response Procedures, but asked me not to record anything on paper, for obvious reasons. While her wings are tattered, she’s still able to fly about, albeit slower than smaller and lighter members of her Flight."
+          </div>
+      </div>
+  </div>
     </h5>
-    <h5>
-      Further information on lore development and usage can be found on the Logos and Lore Usage Guidelines page.</h5>
-    <mat-card-actions align="end">
-      <button mat-button>Like</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
+    </mat-card-content>
   </mat-card>
 </div>
+<br>
