add colony chronicles, story, and magical capabilities

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,6 +11,14 @@
         <mat-divider></mat-divider>
         <div class="container-fluid">
             <div class="row">
+                <button mat-button routerLink="/colony-chronicles">
+                    <h5>Colony Chronicles</h5>
+                </button>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="container-fluid">
+            <div class="row">
                 <button mat-button routerLink="/taxonomy">
                     <h5>Nimbat Taxonomy</h5>
                 </button>
@@ -67,7 +75,7 @@
         <mat-divider></mat-divider>
         <div class="container-fluid">
             <div class="row">
-                <button mat-button [routerLink]="">
+                <button mat-button routerLink="magical-capabilities">
                     <h5>Magical Capabilities</h5>
                 </button>
             </div>
